--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2423,7 +2423,7 @@
                                             />
                                         </div>
                                         <div class="w-100"/>
-                                        <div
+                                        <div style="display: none;"
                                             t-if="not is_anonymous_cart"
                                             id="div_email"
                                             class="col-lg-6 mb-2"
@@ -2497,13 +2497,13 @@
                                             <label class="col-form-label" for="o_street">Street and Number</label>
                                             <input id="o_street" type="text" name="street" class="form-control" t-att-value="partner_sudo.street"/>
                                         </div>
-                                        <div id="div_street2" class="col-lg-12 mb-2">
+                                        <!--<div id="div_street2" class="col-lg-12 mb-2">
                                             <label class="col-form-label label-optional" for="o_street2">Apartment, suite, etc.</label>
                                             <input id="o_street2" type="text" name="street2" class="form-control" t-att-value="partner_sudo.street2" />
-                                        </div>
+                                        </div>-->
                                         <div class="w-100"/>
                                         <t t-if="zip_before_city">
-                                            <div id="div_zip" class="col-md-4 mb-2">
+                                            <div id="div_zip" class="col-md-4 mb-2" style="display:none;">
                                                 <label class="col-form-label label-optional" for="o_zip">Zip Code</label>
                                                 <input id="o_zip" type="text" name="zip" class="form-control" t-att-value="partner_sudo.zip"/>
                                             </div>
@@ -2513,13 +2513,13 @@
                                             <input id="o_city" type="text" name="city" class="form-control" t-att-value="partner_sudo.city"/>
                                         </div>
                                         <t t-if="not zip_before_city">
-                                            <div id="div_zip" class="col-md-4 mb-2">
+                                            <div id="div_zip" class="col-md-4 mb-2" style="display:none;">
                                                 <label class="col-form-label label-optional" for="o_zip">Zip Code</label>
                                                 <input id="o_zip" type="text" name="zip" class="form-control" t-att-value="partner_sudo.zip"/>
                                             </div>
                                         </t>
                                         <div class="w-100"/>
-                                        <div id="div_country" class="col-lg-6 mb-2">
+                                        <div id="div_country" class="col-lg-6 mb-2" style="display:none;">
                                             <label class="col-form-label" for="o_country_id">Country</label>
                                             <select id="o_country_id" name="country_id" class="form-select">
                                                 <option value="">Country...</option>
@@ -2535,11 +2535,15 @@
                                             <label class="col-form-label" for="o_state_id">State / Province</label>
                                             <select id="o_state_id" name="state_id" class="form-select">
                                                 <option value="">State / Province...</option>
-                                                <t t-foreach="country_states" t-as="s">
+                                                <option value="العاصمة">العاصمة</option>
+                                                <option value="البليدة">البليدة</option>
+                                                <option value="بومرداس">بومرداس</option>
+                                                <option value="تيبازة">تيبازة</option>
+                                                <!--<t t-foreach="country_states" t-as="s">
                                                     <option t-att-value="s.id" t-att-selected="s.id == state_id">
                                                         <t t-esc="s.name" />
                                                     </option>
-                                                </t>
+                                                </t>-->
                                             </select>
                                         </div>
                                     </div>
