--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2531,7 +2531,7 @@
                                             </select>
                                         </div>
                                         <div id="div_state" class="col-lg-6 mb-2"
-                                             t-att-style="not country_states and 'display: none'">
+                                             t-att-style="not country_states and">
                                             <label class="col-form-label" for="o_state_id">State / Province</label>
                                             <select id="o_state_id" name="state_id" class="form-select">
                                                 <option value="">State / Province...</option>
