--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2385,7 +2385,7 @@
                                     t-att-data-company-country-code="res_company.country_id.code"
                                 >
                                     <t t-if="is_anonymous_cart">
-                                        <div id="div_email_public" t-attf-class="col-lg-12">
+                                        <div id="div_email_public" t-attf-class="col-lg-12" style="display:none;">
                                             <label class="col-form-label" for="o_email">Email</label>
                                             <div
                                                 t-if="website.account_on_checkout != 'disabled'"
@@ -2447,7 +2447,7 @@
                                                 class="form-control"
                                             />
                                         </div>
-                                        <t t-if="website._display_partner_b2b_fields()">
+                                        <!--<t t-if="website._display_partner_b2b_fields()" style="display:none;">
                                             <div class="w-100"/>
                                             <t t-if="show_vat">
                                                 <t t-set="vat_warning" t-value="partner_sudo.vat and not can_edit_vat"/>
@@ -2492,7 +2492,7 @@
                                                     </small>
                                                 </div>
                                             </t>
-                                        </t>
+                                        </t>-->
                                         <div id="div_street" class="col-lg-12 mb-2">
                                             <label class="col-form-label" for="o_street">Street and Number</label>
                                             <input id="o_street" type="text" name="street" class="form-control" t-att-value="partner_sudo.street"/>
